# stardusk

./: .gitignore  LICENSE  README.md  STARDUST_프로토타입_시뮬레이션.html  [API Specification] 프로젝트 STARDUST (별의 자취) 3700b2e1814e8038a95eccca69efcd2c.md  [System Architecture & PRD] STARDUST CRUD 기반 시스템 설 3700b2e1814e8039b400e50c069ce510.md  [System Architecture] STARDUST 시스템 아키텍처 설계서 3700b2e1814e80778ed1db1be91ced6d.md  [Tech Design] STARDUST 기능별 아키텍처 및 데이터 설계.md  [iOS Integration Guide] STARDUST 클라이언트 연동 및 UX 구현.md  [공모전 제출용 PRD] 프로젝트 STARDUST (별의 자취) 3700b2e1814e8048b852de1e57e51dab.md  [공모전 최종 제안서] STARDUST 사업 기획서.md  [서비스 기획서] 프로젝트 STARDUST (별의 자취) 3700b2e1814e80e7b57fd221b9dca0fb.md  prototype.html
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tour_spots.py  0002_create_trip_tables.py  0003_create_star_tables.py  0004_create_community_tables.py  0005_add_trip_to_sky_videos.py  0006_add_taste_personalization.py  0007_create_users.py  0008_create_moderation.py  0009_create_saved_spots.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  galaxy.py  galaxy_community.py  stars.py  tour.py  trip.py
backend/app/core/: __init__.py  config.py  security.py  validation.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  auth.py  community.py  galaxy.py  star.py  tour.py  trip.py
backend/app/services/: __init__.py  color_extract.py  constellation.py  geo.py  live_session.py  obfuscate.py  social_auth.py  storage.py  taste.py  tour_sync.py  video_extract.py  walk_route.py
backend/docker/: start.sh
docs/: ANDROID_DEVICE_TEST_CHECKLIST.md  APP_STORE_METADATA.md  DEVICE_TEST_CHECKLIST.md  PLAY_STORE_GUIDE.md  PRIVACY_POLICY.md  RELEASE_GUIDE.md  index.html  privacy.html
(+72 files in other folders)
