# 경로: backend/pyproject.toml
# STARDUST 백엔드 (FastAPI) 의존성 및 프로젝트 메타 정의
#
# 설치(권장: uv 또는 pip):
#   cd backend
#   python -m venv .venv && source .venv/bin/activate
#   pip install -e ".[dev]"
#
# 실행:
#   uvicorn app.main:app --reload

[project]
name = "stardust-backend"
version = "0.1.0"
description = "STARDUST(별의 자취) - 위치 기반 힐링 관광 서비스 백엔드 API"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # --- 웹 프레임워크 ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",        # ASGI 서버 (--reload 지원)
    "python-multipart>=0.0.9",        # multipart 업로드(하늘 이미지) 처리

    # --- 설정/검증 ---
    "pydantic>=2.6",
    "pydantic-settings>=2.2",         # .env 기반 Settings 관리

    # --- DB / ORM / 지오 ---
    "sqlmodel>=0.0.16",               # SQLAlchemy + Pydantic
    "geoalchemy2>=0.14",              # PostGIS 지오메트리 타입
    "shapely>=2.0",                   # 좌표/라인 연산
    "asyncpg>=0.29",                  # PostgreSQL 비동기 드라이버
    "psycopg2-binary>=2.9",           # 마이그레이션/동기 작업용
    "alembic>=1.13",                  # DB 마이그레이션

    # --- 인증/보안 ---
    "python-jose[cryptography]>=3.3", # 내부 JWT 발급/검증
    "passlib[bcrypt]>=1.7",           # 해시(필요 시)

    # --- 외부 통신 / 이미지 처리 ---
    "httpx>=0.27",                    # 관광공사 OpenAPI / 소셜 토큰 검증 호출
    "tenacity>=8.2",                  # 외부 호출 재시도
    "pillow>=10.2",                   # 하늘 이미지 디코딩/EXIF 제거
    "numpy>=1.26",                    # 픽셀 연산
    "scikit-learn>=1.4",              # KMeans 대표색 추출

    # --- 스케줄러(관광 데이터 일배치 동기화) ---
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",                      # 린트 + 포맷
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
